[gd_scene load_steps=8 format=3 uid="uid://cy5nqmqmv3lt3"]

[ext_resource type="Script" path="res://main.gd" id="1_r1bpx"]
[ext_resource type="Texture2D" uid="uid://d2iksyg0qwceg" path="res://Sprites/icon.png" id="2_s6j33"]
[ext_resource type="Script" path="res://window.gd" id="3_fqehp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_315oc"]
bg_color = Color(0.0338533, 0.0338533, 0.0338533, 0.866667)

[sub_resource type="Theme" id="Theme_tmhuc"]
Panel/styles/panel = SubResource("StyleBoxFlat_315oc")

[sub_resource type="Gradient" id="Gradient_ugxdt"]
offsets = PackedFloat32Array(0, 0.25, 0.5, 0.75, 1)
colors = PackedColorArray(0.2, 0.1, 0.1, 1, 0.1, 0.2, 0.1, 1, 0.1, 0.1, 0.2, 1, 0.101961, 0.2, 0.101961, 1, 0.2, 0.1, 0.1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wb0tg"]
bg_color = Color(0.165656, 0.165656, 0.165656, 0.968627)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.164706, 0.164706, 0.164706, 0.968627)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_tmhuc")
script = ExtResource("1_r1bpx")
gradient = SubResource("Gradient_ugxdt")

[node name="Button" type="Button" parent="."]
layout_mode = 1
offset_left = 15.0
offset_top = 4.0
offset_right = 1074.0
offset_bottom = 208.0
scale = Vector2(0.317272, 0.317272)
theme_override_font_sizes/font_size = 110
text = "GD Progression Tracker"
icon = ExtResource("2_s6j33")
flat = true

[node name="Window" type="Window" parent="Button"]
title = "Info"
initial_position = 2
size = Vector2i(795, 405)
script = ExtResource("3_fqehp")

[node name="Panel" type="Panel" parent="Button/Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 80.0
offset_right = -28.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Button/Window/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Button/Window/Panel/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Button/Window/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Developer                                                                                                                                                   "

[node name="Label2" type="Label" parent="Button/Window/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_wb0tg")
text = "   nile64"

[node name="HSeparator" type="HSeparator" parent="Button/Window/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Button/Window/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Version"

[node name="VersionLabel" type="Label" parent="Button/Window/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_wb0tg")
text = "   vID"

[node name="HSeparator2" type="HSeparator" parent="Button/Window/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="Button/Window/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Contributors / Special Thanks"

[node name="thanks" type="Label" parent="Button/Window/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_wb0tg")
text = "   "

[node name="HSeparator4" type="HSeparator" parent="Button/Window/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="Button/Window/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Changelog
"

[node name="Changelog" type="Label" parent="Button/Window/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_wb0tg")
text = "   dev-1.0
      - First Development Version
      - Added Info Popup
      - Added Text box to input runs. Temporary."

[node name="HSeparator3" type="HSeparator" parent="Button/Window/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Button/Window"]
offset_left = 170.0
offset_top = 5.0
offset_right = 738.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 50
text = "GD Progression Tracker"

[node name="Sprite2D" type="Sprite2D" parent="Button/Window"]
position = Vector2(112, 36)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_s6j33")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 51.0
offset_top = 78.0
offset_right = -51.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "add runs here"

[connection signal="button_down" from="Button" to="." method="_open_credits_window"]
[connection signal="close_requested" from="Button/Window" to="Button/Window" method="on_close_requested"]
